# flwr-edge-remote

./: final_model.pt  pyproject.toml
flwr_edge_remote/: __init__.py  client_app.py  debug.py  server_app.py  stats_attention.py  task.py
flwr_edge_remote/custom_strategies/: custom_fedavg.py
flwr_edge_remote/dataset_partitions/partition_0/test/: dataset_info.json  state.json
flwr_edge_remote/dataset_partitions/partition_0/train/: state.json
flwr_edge_remote/dataset_partitions/partition_1/: preprocessed.json
flwr_edge_remote/dataset_partitions/partition_1/test/: state.json
flwr_edge_remote/dataset_partitions/partition_1/train/: state.json
flwr_edge_remote/dataset_partitions/partition_2/test/: state.json
flwr_edge_remote/dataset_partitions/partition_2/train/: state.json
flwr_edge_remote/models/: models.py
flwr_edge_remote/setup_dataset/: partition_dataset.py  preprocessing.py
