[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-edge-remote"
version = "1.0.0"
description = "Federated AI with Embedded Devices using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build]
exclude = [
    "datasets/*", # Exclude datasets from FAB (if generated in this directory)
    "_static/*", # Exclude images in README from FAB
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flwr_edge_remote.server_app:app"
clientapp = "flwr_edge_remote.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
fraction-train = 0.5
fraction-evaluate = 1
local-epochs = 2
learning-rate = 0.0005
batch-size = 32
strategy-name = "FedAvg"

[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 2 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.embedded-federation]
address = "127.0.0.1:9093"
insecure = true
